fix typo in slides

--- a/slides/202206_Survey_WindermereHotSpot.html
+++ b/slides/202206_Survey_WindermereHotSpot.html
@@ -226,12 +226,17 @@ name: con
 
 ## Preliminary Conclusions
 
-* TP significantly lower (i.e. cold spot) throughout the majority of Lake Windermere, hotspot located at Leven monitoring location
-* NOx hotspot throughout Lake Windermere, coldspots northern of Windermere
-* (No Hotspot analysis) Dissolved silica concentrations are relative low in Windermere - [bubble plot](#extra1)
-  * Potential link to algae growth dynamics
-* Total Coliforms spatial distribution is variable throughout the survey with some hotspots detected amongst coldspots in Windermere
-* E. coli less extreme with smaller hot and cold spots across the survey
+* TP significantly lower (i.e. cold spot) throughout the majority of Lake Windermere, hotspot located at Leven monitoring location.
+
+* NOx hotspot throughout Lake Windermere, coldspots north of Windermere.
+
+* _(No Hotspot analysis)_ Dissolved silica concentrations are relative low in Windermere - [bubble plot](#extra1)
+  * Potential link to algae growth dynamics.
+  
+* Total Coliforms spatial distribution is variable throughout the survey with some hotspots detected amongst coldspots in Windermere.
+
+* E. coli less extreme with smaller hot and cold spots across the survey.
+
 * Enterococcus is lower in Windermere than other area. 
 
 * Next step - further evaluation of June survey and wait for next survey results. 
